--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-loader": "8.0.5",
     "bootstrap": "^5.2.1",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
