--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-loader": "8.0.5",
     "bootstrap": "^5.2.1",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
@@ -16,6 +17,7 @@
     "react-ionicons": "^1.5.7",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "react-switch": "^7.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
